Started with basic forms.

--- a/config/app.json
+++ b/config/app.json
@@ -7,6 +7,9 @@
       "../node_modules/react-dom/dist/react-dom.js",
       "../node_modules/history/umd/History.js",
       "javascripts/app.js",
+      "javascripts/transferform.jsx",
+      "javascripts/approveform.jsx",
+      "javascripts/balanceofform.jsx",
       "javascripts/main.jsx",
       "javascripts/navbar.jsx",
       "javascripts/tokenpage.jsx",
