More work towards MVP

--- a/config/app.json
+++ b/config/app.json
@@ -9,6 +9,7 @@
       "javascripts/app.js",
       "javascripts/transferform.jsx",
       "javascripts/approveform.jsx",
+      "javascripts/unapproveform.jsx",
       "javascripts/balanceofform.jsx",
       "javascripts/main.jsx",
       "javascripts/navbar.jsx",
