Large refactor of code.

--- a/config/app.json
+++ b/config/app.json
@@ -7,13 +7,8 @@
       "../node_modules/reflux-tx/dist/refluxTX.js",
       "../node_modules/history/umd/History.js",
       "javascripts/app.js",
-      "javascripts/transferform.jsx",
-      "javascripts/transferfromform.jsx",
-      "javascripts/createtokenform.jsx",
-      "javascripts/approveform.jsx",
-      "javascripts/unapproveform.jsx",
-      "javascripts/balanceofform.jsx",
-      "javascripts/allowanceform.jsx",
+      "javascripts/txform.jsx",
+      "javascripts/inputform.jsx",
       "javascripts/main.jsx",
       "javascripts/navbar.jsx",
       "javascripts/tokenpage.jsx",
