Re-added createtokenform & some packages.json changes.

--- a/config/app.json
+++ b/config/app.json
@@ -9,6 +9,7 @@
       "javascripts/app.js",
       "javascripts/txform.jsx",
       "javascripts/inputform.jsx",
+      "javascripts/createtokenform.jsx",
       "javascripts/main.jsx",
       "javascripts/navbar.jsx",
       "javascripts/tokenpage.jsx",
