--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^0.13.x",
     "reflux-tx": "git@github.com:simondlr/reflux-tx.git",
-    "react-router": "^1.0.1",
+    "react-router": "1.0.1",
     "web3": "git://github.com/ethereum/web3.js#0.15.0",
     "history": "1.13.x"
   },
@@ -22,7 +22,7 @@
     {
       "name": "Simon de la Rouviere",
       "email": "simon@delarouviere.com",
-      "url": "https://github.com/tcoulter"
+      "url": "https://github.com/simondlr"
     },
     {
       "name": "Marian Oancea",
