--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^0.13.x",
     "bootstrap": "3.3.6",
-    "reflux-tx": "git@github.com:simondlr/reflux-tx.git",
+    "reflux-tx": "0.1.5",
     "react-router": "1.0.1",
     "web3": "git://github.com/ethereum/web3.js#0.15.0",
     "history": "1.13.x"
