First pass at react account badge.

--- a/config/app.json
+++ b/config/app.json
@@ -5,7 +5,9 @@
       "../node_modules/jquery/dist/jquery.js",
       "../node_modules/bootstrap/dist/js/bootstrap.js",
       "../node_modules/react/dist/react.js",
+      "../node_modules/react-dom/dist/react-dom.js",
       "../node_modules/react-router/umd/ReactRouter.js",
+      "../node_modules/react-account-badge/dist/bundle.js",
       "../node_modules/reflux-tx/dist/refluxTX.js",
       "../node_modules/history/umd/History.js",
       "javascripts/app.js",
@@ -20,7 +22,8 @@
     ],
     "app.css": [
       "stylesheets/app.css",
-      "../node_modules/bootstrap/dist/css/bootstrap.css"
+      "../node_modules/bootstrap/dist/css/bootstrap.css",
+      "../node_modules/react-account-badge/style.css"
     ],
     "images/": "images/"
   },
