--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.1",
   "description": "Token Factory",
   "dependencies": {
-    "react": "^0.13.x",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "jquery": "1.11.3",
     "bootstrap": "3.3.6",
-    "reflux-tx": "0.1.5",
+    "reflux-tx": "git@github.com:simondlr/reflux-tx.git",
     "react-router": "1.0.1",
+    "react-account-badge": "./react-account-badge",
     "web3": "git://github.com/ethereum/web3.js#0.15.0",
     "history": "1.13.x"
   },
