--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^0.14.3",
     "jquery": "1.11.3",
     "bootstrap": "3.3.6",
-    "reflux-tx": "git@github.com:simondlr/reflux-tx.git",
+    "reflux-tx": "0.1.6",
     "react-router": "1.0.1",
     "react-account-badge": "./react-account-badge",
     "web3": "git://github.com/ethereum/web3.js#0.15.0",
