--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bluebird": "^3.1.5",
     "bootstrap": "3.3.6",
     "copy-webpack-plugin": "^1.1.1",
+    "css-loader": "^0.23.1",
     "ether-pudding": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "history": "1.13.x",
@@ -20,7 +21,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "1.0.1",
-    "reflux-tx": "git@github.com:simondlr/reflux-tx.git",
+    "reflux-tx": "0.2.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "web3": "git://github.com/ethereum/web3.js.git#0.15.0",
