several ux improvements

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^0.23.1",
     "ether-pudding": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "font-awesome": "4.5.0",
     "history": "1.13.x",
     "jquery": "1.11.3",
     "json-loader": "^0.5.4",
