--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "font-awesome": "4.5.0",
     "history": "1.13.x",
+    "imports-loader": "^0.6.5",
     "jquery": "1.11.3",
     "json-loader": "^0.5.4",
     "node-sass": "^3.4.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-mixin": "^3.0.5",
     "react-router": "1.0.1",
     "reflux-tx": "0.2.4",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "web3": "git://github.com/ethereum/web3.js.git#0.15.0",
+    "web3": "0.16.0",
     "webpack": "^1.12.12"
   },
   "devDependencies": {
@@ -34,6 +36,8 @@
     "babel-runtime": "^6.3.19",
     "bluebird": "*",
     "file-loader": "^0.8.5",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lodash": "*",
     "mkdirp": "*",
     "url-loader": "^0.5.7"
