--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "reflux-tx": "0.2.4",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "uport-lib": "git+ssh://git@github.com:ConsenSys/uport-lib.git",
     "web3": "0.16.0",
     "webpack": "^1.12.12"
   },
@@ -36,6 +37,7 @@
     "babel-runtime": "^6.3.19",
     "bluebird": "*",
     "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "*",
