--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "imports-loader": "^0.6.5",
     "jquery": "1.11.3",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.4.2",
+    "node-sass": "^>=4.13.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-mixin": "^3.0.5",
